--- a/mdBest.ipynb
+++ b/mdBest.ipynb
@@ -263,15 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Address', 'GPS', 'Telephone', 'Email', 'Web: ']\n",
-      "{'Address': '5814 Broad Run Road, Jefferson, MD,  21755', 'Telephone': '301-371-4111', 'Email': 'contact by email', 'Web: ': 'visit website', 'lat': '39.389087', 'long': ' -77.59276999999997'}\n"
+      "{'Address': '5814 Broad Run Road, Jefferson, MD,  21755', 'Telephone': '301-371-4111', 'Email': 'contact by email', 'Web: ': 'visit website', 'lat': '39.389087', 'long': ' -77.59276999999997', 'commodities': 'Hunting, Compost-manure, Hay, Honey, Lamb, Livestock, Meat-fowl, Sheep, Straw, Wool, Conventional, Grass Fed/Pastured, Halal, Customer Pick Up'}\n"
      ]
     }
    ],
@@ -282,10 +281,10 @@
     "import urllib\n",
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//producerLinks.csv', header=None, nrows=1).at[0,0]\n",
-    "#data = \"C://Users//stoandel//Documents//PythonProgramming//mdBest//2021 Castle Hill Farm (Vorac Suffolks) — Custom-Processed Lamb — Suffolk Breeding Stock — 4-H Project Lambs — Grass Hay Bales — Compost Marylands Best.htm\"\n",
-    "html = urllib.request.urlopen(data).read()\n",
-    "#html = open(data, 'r', encoding=\"utf-8\")\n",
+    "#data = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//producerLinks.csv', header=None, nrows=1).at[0,0]\n",
+    "data = \"C://Users//stoandel//Documents//PythonProgramming//mdBest//2021 Castle Hill Farm (Vorac Suffolks) — Custom-Processed Lamb — Suffolk Breeding Stock — 4-H Project Lambs — Grass Hay Bales — Compost Marylands Best.htm\"\n",
+    "#html = urllib.request.urlopen(data).read()\n",
+    "html = open(data, 'r', encoding=\"utf-8\")\n",
     "soup = BeautifulSoup(html, features=\"html5lib\")\n",
     "\n",
     "# Retrieve address and contact information\n",
@@ -306,7 +305,7 @@
     "    \n",
     "# First dt tag is the header\n",
     "address_head = address_head[1:]\n",
-    "print(address_head)\n",
+    "\n",
     "for i in tag.find_all(\"dd\"):\n",
     "    address_info.append(i.text)\n",
     "\n",
@@ -319,8 +318,25 @@
     "info_dict[\"long\"] = info_dict[\"GPS\"].split(\",\")[1]\n",
     "info_dict.pop(\"GPS\")\n",
     "\n",
+    "commodity_string = \"\"        \n",
+    "\n",
+    "# Get commodity information.\n",
+    "for i in soup.find_all(\"a\"):\n",
+    "\n",
+    "    if \"/?dir-search=yes&orderby=post_title&order=asc&s=%22\" in i['href']:\n",
+    "        commodity_string = commodity_string + i.contents[0] + \", \"\n",
+    "\n",
+    "# Get rid of trailing comma.\n",
+    "if commodity_string != \"\":\n",
+    "    commodity_string  = commodity_string[:-2]\n",
+    "\n",
+    "#Add comma separated string to information dictionary.\n",
+    "info_dict[\"commodities\"] = commodity_string\n",
     "print(info_dict)\n",
-    "        "
+    "\n",
+    "with open('C://Users//stoandel//Documents//PythonProgramming//mdBest//producer_info.csv', 'w') as f:  \n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(info_dict)"
    ]
   },
   {
