Changed names to IDs deleted out tests

--- a/mdBest.ipynb
+++ b/mdBest.ipynb
@@ -263,14 +263,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Address': '5814 Broad Run Road, Jefferson, MD,  21755', 'Telephone': '301-371-4111', 'Email': 'contact by email', 'Web: ': 'visit website', 'lat': '39.389087', 'long': ' -77.59276999999997', 'commodities': 'Hunting, Compost-manure, Hay, Honey, Lamb, Livestock, Meat-fowl, Sheep, Straw, Wool, Conventional, Grass Fed/Pastured, Halal, Customer Pick Up'}\n"
+      "['https://marylandsbest.maryland.gov/producer/stonecrest-farms/']\n",
+      "['https://marylandsbest.maryland.gov/producer/sudlersville-meat-locker/']\n",
+      "['https://marylandsbest.maryland.gov/producer/sugarloaf-sustainable-farms/']\n",
+      "['https://marylandsbest.maryland.gov/producer/summers-farm-inc/']\n",
+      "['https://marylandsbest.maryland.gov/producer/susan-inglehart-s-flowers/']\n",
+      "['https://marylandsbest.maryland.gov/producer/takoma-park-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/talmar-farms/']\n",
+      "['https://marylandsbest.maryland.gov/producer/taneytown-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/teddy-bear-fresh-produce/']\n",
+      "['https://marylandsbest.maryland.gov/producer/the-avenue-at-white-marsh-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/the-farm-at-our-house/']\n",
+      "['https://marylandsbest.maryland.gov/producer/the-farmers-market-at-maryland/']\n",
+      "['https://marylandsbest.maryland.gov/producer/the-genuine-food-co/']\n",
+      "['https://marylandsbest.maryland.gov/producer/the-rosedale-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/the-silk-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/the-village-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/thurmont-first-main-street-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/tilmon-s-island-winery/']\n",
+      "['https://marylandsbest.maryland.gov/producer/tlv-tree-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/maple-springs-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/town-of-new-market-green-team-of-new-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/townsend-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/towson-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/trappe-creek-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/unity-churchill-nursery/']\n",
+      "['https://marylandsbest.maryland.gov/producer/university-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/usda-beltsville-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/valor-ranch/']\n",
+      "['https://marylandsbest.maryland.gov/producer/veteran-compost/']\n",
+      "['https://marylandsbest.maryland.gov/producer/victory-garden-ranch-veterans-growing-together/']\n",
+      "['https://marylandsbest.maryland.gov/producer/village-of-cross-keys-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/waldorf-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/waltz-family-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/washington-county-farmers-market-elks-lodge/']\n",
+      "['https://marylandsbest.maryland.gov/producer/waters-orchard/']\n",
+      "['https://marylandsbest.maryland.gov/producer/weber-s-cider-mill-farm-inc/']\n",
+      "['https://marylandsbest.maryland.gov/producer/west-ocean-city-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/wmdrmc-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/whispering-breeze-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/whistle-punk-farm-llc/']\n",
+      "['https://marylandsbest.maryland.gov/producer/white-rose-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/whitelock-community-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/wild-peace-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/williamsport-farmers-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/willow-oak-flower-and-herb-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/willow-valley-farm/']\n",
+      "['https://marylandsbest.maryland.gov/producer/wilson-s-farm-market/']\n",
+      "['https://marylandsbest.maryland.gov/producer/yoder-s-tomatoes/']\n"
      ]
     }
    ],
@@ -280,63 +327,60 @@
     "from bs4 import BeautifulSoup\n",
     "import urllib\n",
     "import pandas as pd\n",
+    "import time\n",
     "\n",
-    "#data = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//producerLinks.csv', header=None, nrows=1).at[0,0]\n",
-    "data = \"C://Users//stoandel//Documents//PythonProgramming//mdBest//2021 Castle Hill Farm (Vorac Suffolks) — Custom-Processed Lamb — Suffolk Breeding Stock — 4-H Project Lambs — Grass Hay Bales — Compost Marylands Best.htm\"\n",
-    "#html = urllib.request.urlopen(data).read()\n",
-    "html = open(data, 'r', encoding=\"utf-8\")\n",
-    "soup = BeautifulSoup(html, features=\"html5lib\")\n",
+    "#data = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//producerLinks.csv', header=None, nrows=20).at[0,0]\n",
     "\n",
-    "# Retrieve address and contact information\n",
-    "# This is very specific, and will fail to retrieve email addresses and websites\n",
-    "tag = soup.find(class_=\"item-address\")\n",
+    "# Make a unique integer ID for each ID- identifying information is not wanted.\n",
+    "id = 1\n",
     "\n",
-    "address_head = list()\n",
-    "address_info = list()\n",
+    "with open('C://Users//stoandel//Documents//PythonProgramming//mdBest//producer_links_1.csv','r') as data:\n",
+    "    data_reader = csv.reader(data, delimiter=' ', quotechar='|')\n",
+    "    for url in data_reader:\n",
+    "        print(url)\n",
+    "        html = urllib.request.urlopen(url[0]).read()\n",
     "\n",
-    "for i in tag.find_all(\"dt\"):\n",
-    "    address_head.append(i.text)\n",
+    "        # Local file for testing:\n",
+    "        #data = \"C://...//2021 Castle Hill Farm (Vorac Suffolks) — Custom-Processed Lamb — Suffolk Breeding Stock — 4-H Project Lambs — Grass Hay Bales — Compost Marylands Best.htm\"\n",
+    "        #html = open(data, 'r', encoding=\"utf-8\")\n",
     "\n",
-    "# Remove whitespace and colons\n",
-    "for i in range(0,len(address_head) - 1):\n",
-    "    address_head[i] = address_head[i].replace(\" \",\"\")\n",
-    "    address_head[i] = address_head[i].replace(\":\",\"\")\n",
+    "        soup = BeautifulSoup(html, features=\"html5lib\")\n",
+    "        \n",
+    "        # This is not used\n",
+    "        # Get the producer's name\n",
+    "        #producer = soup.find(\"title\").contents[0]\n",
     "\n",
-    "    \n",
-    "# First dt tag is the header\n",
-    "address_head = address_head[1:]\n",
+    "        # Create a list for location information and for commodity information\n",
+    "        address_list = [id]\n",
+    "        commodity_list = [id]\n",
     "\n",
-    "for i in tag.find_all(\"dd\"):\n",
-    "    address_info.append(i.text)\n",
+    "        # Retrieve address and contact information\n",
+    "        # This is very specific, and will fail to retrieve email addresses and websites\n",
+    "        tag = soup.find(class_=\"item-address\")\n",
     "\n",
-    "# Make a dictionary with the information\n",
-    "info_dict = dict(zip(address_head, address_info))\n",
+    "        for i in tag.find_all(\"dd\"):\n",
+    "            address_info.append(i.text)\n",
     "\n",
-    "# Separate out latitude and longitude\n",
-    "info_dict[\"lat\"] = info_dict[\"GPS\"].split(\",\")[0]\n",
+    "        # Get commodity information.\n",
+    "        for i in soup.find_all(\"a\"):\n",
     "\n",
-    "info_dict[\"long\"] = info_dict[\"GPS\"].split(\",\")[1]\n",
-    "info_dict.pop(\"GPS\")\n",
+    "            if \"/?dir-search=yes&orderby=post_title&order=asc&s=%22\" in i['href']:\n",
+    "                commodity_list.append(i.contents[0])\n",
     "\n",
-    "commodity_string = \"\"        \n",
     "\n",
-    "# Get commodity information.\n",
-    "for i in soup.find_all(\"a\"):\n",
+    "        with open('C://Users//stoandel//Documents//PythonProgramming//mdBest//address_info.csv', 'a+', newline='') as f:  \n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerow(address_info)\n",
     "\n",
-    "    if \"/?dir-search=yes&orderby=post_title&order=asc&s=%22\" in i['href']:\n",
-    "        commodity_string = commodity_string + i.contents[0] + \", \"\n",
-    "\n",
-    "# Get rid of trailing comma.\n",
-    "if commodity_string != \"\":\n",
-    "    commodity_string  = commodity_string[:-2]\n",
-    "\n",
-    "#Add comma separated string to information dictionary.\n",
-    "info_dict[\"commodities\"] = commodity_string\n",
-    "print(info_dict)\n",
-    "\n",
-    "with open('C://Users//stoandel//Documents//PythonProgramming//mdBest//producer_info.csv', 'w') as f:  \n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerow(info_dict)"
+    "        with open('C://Users//stoandel//Documents//PythonProgramming//mdBest//commodity_list.csv', 'a+', newline='') as f:  \n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerow(commodity_list)\n",
+    "        \n",
+    "        id = id + 1\n",
+    "        \n",
+    "        # A pause is used to ensure that there are not issues with the server.\n",
+    "        # Since there are not that many URLs to go through, thee is no provlem with waiting a few minutes.\n",
+    "        time.sleep(1)"
    ]
   },
   {
