--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -1,10 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The Maryland's Best data cannot be accessed through back end means, at least by the Maryland Department of Agriculture Markting Section. It is unlikely that most of the data we are looking for, commodity data specifically, is stored in a database as they are given as a list of href tags on each individual farm page. To find each individual farm, I used their search function without any options. The results show 349 producer operations; however, Farmers' Markets are included and will need to be disregarded. By default 20 entries are given on each page, for a total of 18 pages from which all producer links will need to be retrieved.\n",
+    "The Maryland's Best data cannot be accessed through back end means, at least by the Maryland Department of Agriculture Markting Section. It is unlikely that most of the data we are looking for, commodity data specifically, is stored in a database as they are given as a list of href tags on each individual farm page. To find each individual farm, I used their search function without any options. The results show 347 producer operations; however, Farmers' Markets are included as well. By default 20 entries are given on each page, for a total of 18 pages from which all producer links will need to be retrieved.\n",
     "\n",
     "https://marylandsbest.maryland.gov/page/1/?orderby=post_title&order=asc&geo-radius=1000&s&geo-lat&geo-lng&categories=0&locations=0&dir-search=yes\n",
     "\n",
@@ -264,7 +264,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -384,11 +386,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our data has been collected and saved, and is now ready for cleaning and formatting."
+   ]
   }
  ],
  "metadata": {
