--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9a25fef",
+   "id": "fbf0cb69",
    "metadata": {},
    "source": [
     "In this file we will prepare our address information and commodity information datasets for evaluation."
@@ -10,15 +10,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee621afe",
+   "execution_count": 21,
+   "id": "ab1361de",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "address_set = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//address_info.csv', header=None)\n",
     "commodity_set = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//commodity_list.csv', header=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20442ebe",
+   "metadata": {},
+   "source": [
+    "Unneccesary columns are dropped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0dc4fb1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address_set = address_set.drop([3,4,5], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4d22fd41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64Index([0, 1, 2], dtype='int64')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(address_set.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2c4a55c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method NDFrame.head of        0                                                  1  \\\n",
+      "0      1         5814 Broad Run Road, Jefferson, MD,  21755   \n",
+      "1      2            400 East 32nd St, Baltimore, MD,  00000   \n",
+      "2      3            3365 Hall Creek Lane, Owings, MD  20736   \n",
+      "3      4        4024 Main St, Grasonville, MD 21638, USA \\n   \n",
+      "4      5  2001 Medical Parkway - South Tower, lower leve...   \n",
+      "..   ...                                                ...   \n",
+      "342  343      17051 Virginia Avenue, Williamsport, MD 21795   \n",
+      "343  344            8109 Telegraph Road, Severn, MD,  21144   \n",
+      "344  345            11939 Harford Road\\n Glen Arm, MD 21057   \n",
+      "345  346       2115 Waverly Drive, Bel Air, MD,  21015-1013   \n",
+      "346  347     2108 Pleasant Valley Road, Oakland, MD,  21550   \n",
+      "\n",
+      "                                         2  \n",
+      "0            39.389087, -77.59276999999997  \n",
+      "1                    39.327199, -76.610929  \n",
+      "2                    38.690406, -76.667956  \n",
+      "3                    38.958750, -76.215490  \n",
+      "4            38.990144, -76.53397899999999  \n",
+      "..                                     ...  \n",
+      "342                39.6140174, -77.7790218  \n",
+      "343                  39.113281, -76.691777  \n",
+      "344          39.44927500000001, -76.470191  \n",
+      "345  39.59146914495911, -76.32424235343933  \n",
+      "346                  39.360575, -79.395998  \n",
+      "\n",
+      "[347 rows x 3 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(address_set.head)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b46d74dd",
+   "metadata": {},
+   "source": [
+    "We will check if there are coordinates for each record. If some are missing, we may cross-reference using the address."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "889b2d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '[0-9]{2}.[0-9], [-0-9]'\n",
+    "\n",
+    "# Not displayed\n",
+    "#print(address_set[address_set[2].str.contains(pattern) == False])\n",
+    "\n",
+    "#Print how many are missing coordinates\n",
+    "print(len(address_set[address_set[2].str.contains(pattern) == False]))\n",
+    "\n",
+    "# Copy the records missing coordinates to a new dataframe\n",
+    "coordinate_set = address_set[address_set[2].str.contains(pattern) == False]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4df68c89",
+   "metadata": {},
+   "source": [
+    "Only 21 records do not have coordinates. Fortunately it appears that each record not containing coordinates does have an address (not displayed here).\n",
+    "\n",
+    "To get the coordinates we will be utilizing the [U.S. Census Bureau's Geocoding Services API](https://geocoding.geo.census.gov/geocoder/Geocoding_Services_API.html)"
    ]
   }
  ],
