--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fbf0cb69",
+   "id": "43b7bda8",
    "metadata": {},
    "source": [
     "In this file we will prepare our address information and commodity information datasets for evaluation."
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ab1361de",
+   "execution_count": 122,
+   "id": "8b9a7a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20442ebe",
+   "id": "887d86bc",
    "metadata": {},
    "source": [
     "Unneccesary columns are dropped"
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "0dc4fb1e",
+   "execution_count": null,
+   "id": "802856fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,69 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "4d22fd41",
+   "execution_count": null,
+   "id": "723719a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Int64Index([0, 1, 2], dtype='int64')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(address_set.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "2c4a55c1",
+   "execution_count": null,
+   "id": "5057ad89",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bound method NDFrame.head of        0                                                  1  \\\n",
-      "0      1         5814 Broad Run Road, Jefferson, MD,  21755   \n",
-      "1      2            400 East 32nd St, Baltimore, MD,  00000   \n",
-      "2      3            3365 Hall Creek Lane, Owings, MD  20736   \n",
-      "3      4        4024 Main St, Grasonville, MD 21638, USA \\n   \n",
-      "4      5  2001 Medical Parkway - South Tower, lower leve...   \n",
-      "..   ...                                                ...   \n",
-      "342  343      17051 Virginia Avenue, Williamsport, MD 21795   \n",
-      "343  344            8109 Telegraph Road, Severn, MD,  21144   \n",
-      "344  345            11939 Harford Road\\n Glen Arm, MD 21057   \n",
-      "345  346       2115 Waverly Drive, Bel Air, MD,  21015-1013   \n",
-      "346  347     2108 Pleasant Valley Road, Oakland, MD,  21550   \n",
-      "\n",
-      "                                         2  \n",
-      "0            39.389087, -77.59276999999997  \n",
-      "1                    39.327199, -76.610929  \n",
-      "2                    38.690406, -76.667956  \n",
-      "3                    38.958750, -76.215490  \n",
-      "4            38.990144, -76.53397899999999  \n",
-      "..                                     ...  \n",
-      "342                39.6140174, -77.7790218  \n",
-      "343                  39.113281, -76.691777  \n",
-      "344          39.44927500000001, -76.470191  \n",
-      "345  39.59146914495911, -76.32424235343933  \n",
-      "346                  39.360575, -79.395998  \n",
-      "\n",
-      "[347 rows x 3 columns]>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(address_set.head)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b46d74dd",
+   "id": "16a09bc5",
    "metadata": {},
    "source": [
     "We will check if there are coordinates for each record. If some are missing, we may cross-reference using the address."
@@ -112,18 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "889b2d23",
+   "execution_count": null,
+   "id": "a92b47f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pattern = '[0-9]{2}.[0-9], [-0-9]'\n",
     "\n",
@@ -139,13 +89,75 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df68c89",
+   "id": "ed3e8a1d",
    "metadata": {},
    "source": [
-    "Only 21 records do not have coordinates. Fortunately it appears that each record not containing coordinates does have an address (not displayed here).\n",
+    "Only 21 records do not have coordinates. Fortunately it appears that all except for two of the records not containing coordinates have an address (not displayed here).\n",
     "\n",
     "To get the coordinates we will be utilizing the [U.S. Census Bureau's Geocoding Services API](https://geocoding.geo.census.gov/geocoder/Geocoding_Services_API.html)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "b82b3e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(coordinate_set[1])\n",
+    "coordinate_list = list()\n",
+    "for i in coordinate_set[1]:\n",
+    "    coordinate_list.append(i)\n",
+    "for i in range(0,len(coordinate_list)):\n",
+    "    j = coordinate_list[i]\n",
+    "    j = re.sub(\"\\s+\",\"+\",j)\n",
+    "    j = re.sub(\",\",\"\",j)\n",
+    "    coordinate_list[i] = j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "b3732932",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "county_list = list()\n",
+    "for i in coordinate_list:\n",
+    "    \n",
+    "    url = \"https://geocoding.geo.census.gov/geocoder/geographies/onelineaddress?address=\"+i+\"&benchmark=Public_AR_Census2020&vintage=Census2020_Census2020&layers=10&format=json\"\n",
+    "\n",
+    "    res = requests.get(base_url)\n",
+    "\n",
+    "    if res.status_code != 200:\n",
+    "        county_list.append(\"\")\n",
+    "    else:\n",
+    "        response = res.json()\n",
+    "        try:\n",
+    "            county_list.append(response[\"result\"]['addressMatches'][0]['geographies']['Census Blocks'][0]['COUNTY'])\n",
+    "        except IndexError:\n",
+    "            county_list.append(\"\")\n",
+    "\n",
+    "print(county_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbe84e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
