--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "id": "8b9a7a3e",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "802856fe",
    "metadata": {},
    "outputs": [],
@@ -42,20 +42,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "723719a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64Index([0, 1, 2], dtype='int64')\n"
+     ]
+    }
+   ],
    "source": [
     "print(address_set.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5057ad89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method NDFrame.head of        0                                                  1  \\\n",
+      "0      1         5814 Broad Run Road, Jefferson, MD,  21755   \n",
+      "1      2            400 East 32nd St, Baltimore, MD,  00000   \n",
+      "2      3            3365 Hall Creek Lane, Owings, MD  20736   \n",
+      "3      4        4024 Main St, Grasonville, MD 21638, USA \\n   \n",
+      "4      5  2001 Medical Parkway - South Tower, lower leve...   \n",
+      "..   ...                                                ...   \n",
+      "342  343      17051 Virginia Avenue, Williamsport, MD 21795   \n",
+      "343  344            8109 Telegraph Road, Severn, MD,  21144   \n",
+      "344  345            11939 Harford Road\\n Glen Arm, MD 21057   \n",
+      "345  346       2115 Waverly Drive, Bel Air, MD,  21015-1013   \n",
+      "346  347     2108 Pleasant Valley Road, Oakland, MD,  21550   \n",
+      "\n",
+      "                                         2  \n",
+      "0            39.389087, -77.59276999999997  \n",
+      "1                    39.327199, -76.610929  \n",
+      "2                    38.690406, -76.667956  \n",
+      "3                    38.958750, -76.215490  \n",
+      "4            38.990144, -76.53397899999999  \n",
+      "..                                     ...  \n",
+      "342                39.6140174, -77.7790218  \n",
+      "343                  39.113281, -76.691777  \n",
+      "344          39.44927500000001, -76.470191  \n",
+      "345  39.59146914495911, -76.32424235343933  \n",
+      "346                  39.360575, -79.395998  \n",
+      "\n",
+      "[347 rows x 3 columns]>\n"
+     ]
+    }
+   ],
    "source": [
     "print(address_set.head)"
    ]
@@ -70,10 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a92b47f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
    "source": [
     "pattern = '[0-9]{2}.[0-9], [-0-9]'\n",
     "\n",
@@ -94,67 +144,107 @@
    "source": [
     "Only 21 records do not have coordinates. Fortunately it appears that all except for two of the records not containing coordinates have an address (not displayed here).\n",
     "\n",
-    "To get the coordinates we will be utilizing the [U.S. Census Bureau's Geocoding Services API](https://geocoding.geo.census.gov/geocoder/Geocoding_Services_API.html)"
+    "To get the coordinates we will be utilizing [Google's Geocoding API](https://developers.google.com/maps/documentation/geocoding/overview). Originally the plan was to use the [U.S. Census Bureau's Geocoding Services API](https://geocoding.geo.census.gov/geocoder/Geocoding_Services_API.html); however, it did not do a good job of catching any name discrapencies. The basic examples provided in the API documentation have been adapted for this purpose."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "b82b3e6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(coordinate_set[1])\n",
-    "coordinate_list = list()\n",
-    "for i in coordinate_set[1]:\n",
-    "    coordinate_list.append(i)\n",
-    "for i in range(0,len(coordinate_list)):\n",
-    "    j = coordinate_list[i]\n",
-    "    j = re.sub(\"\\s+\",\"+\",j)\n",
-    "    j = re.sub(\",\",\"\",j)\n",
-    "    coordinate_list[i] = j"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "b3732932",
-   "metadata": {},
+   "execution_count": 26,
+   "id": "bbe84e0b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '']\n"
+      "Maryland\n",
+      "Kent County\n",
+      "Carroll County\n",
+      "Montgomery County\n",
+      "Baltimore County\n",
+      "Caroline County\n",
+      "Prince George's County\n",
+      "Anne Arundel County\n",
+      "Cecil County\n",
+      "Carroll County\n",
+      "Anne Arundel County\n",
+      "Howard County\n",
+      "Maryland\n",
+      "Frederick County\n",
+      "Caroline County\n",
+      "Carroll County\n",
+      "Wicomico County\n",
+      "Montgomery County\n",
+      "Baltimore County\n",
+      "Garrett County\n",
+      "Frederick County\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
-    "\n",
+    "import googlemaps\n",
+    "import time\n",
     "county_list = list()\n",
-    "for i in coordinate_list:\n",
-    "    \n",
-    "    url = \"https://geocoding.geo.census.gov/geocoder/geographies/onelineaddress?address=\"+i+\"&benchmark=Public_AR_Census2020&vintage=Census2020_Census2020&layers=10&format=json\"\n",
+    "result_list = list()\n",
+    "gmaps = googlemaps.Client(key='')\n",
     "\n",
-    "    res = requests.get(base_url)\n",
+    "delay = 0.1  # Set the delay to 100ms.\n",
     "\n",
-    "    if res.status_code != 200:\n",
-    "        county_list.append(\"\")\n",
-    "    else:\n",
-    "        response = res.json()\n",
-    "        try:\n",
-    "            county_list.append(response[\"result\"]['addressMatches'][0]['geographies']['Census Blocks'][0]['COUNTY'])\n",
-    "        except IndexError:\n",
-    "            county_list.append(\"\")\n",
-    "\n",
-    "print(county_list)"
+    "for i in coordinate_set[1]:\n",
+    "    # Geocoding an address\n",
+    "    geocode_result = gmaps.geocode(i)\n",
+    "    result_list.append(geocode_result)\n",
+    "    time.sleep(delay)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe84e0b",
+   "id": "32c6b3ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the county name for each result\n",
+    "for i in result_list:\n",
+    "    for j in i[0]['address_components']:\n",
+    "        if j['long_name'] and 'County' in j['long_name']:\n",
+    "            county_list.append(j['long_name'])\n",
+    "            \n",
+    "# Extract the coordinates for each result (not needed, but good for completion)\n",
+    "coordinate_list = list()\n",
+    "for i in result_list:\n",
+    "    coordinate_list.append(str(i[0]['geometry']['location']['lat']) + ', ' + str(i[0]['geometry']['location']['lng']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "59200e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-67-c60fea3fc74a>:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  address_set[address_set[2].str.contains(pattern) == False][2] = coordinate_list\n"
+     ]
+    }
+   ],
+   "source": [
+    "address_set[address_set[2].str.contains(pattern) == False][2] = coordinate_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "784366ae",
    "metadata": {},
    "outputs": [],
    "source": []
