--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "id": "8b9a7a3e",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "id": "802856fe",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "id": "723719a0",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "5057ad89",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "id": "a92b47f1",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c6b3ca",
+   "id": "c654cf60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,31 +220,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "59200e24",
+   "execution_count": 80,
+   "id": "c1a54f2c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-67-c60fea3fc74a>:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  address_set[address_set[2].str.contains(pattern) == False][2] = coordinate_list\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "address_set[address_set[2].str.contains(pattern) == False][2] = coordinate_list"
+    "# Add the counties to a new column\n",
+    "address_set.loc[address_set[2].str.contains(pattern) == False, 3] = county_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "f7d6d453",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add in the newly found coordinates\n",
+    "address_set.loc[address_set[2].str.contains(pattern) == False, 2] = coordinate_list"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "784366ae",
+   "id": "d149b7c6",
    "metadata": {},
    "outputs": [],
    "source": []
