--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -188,7 +188,7 @@
     "import time\n",
     "county_list = list()\n",
     "result_list = list()\n",
-    "gmaps = googlemaps.Client(key='')\n",
+    "gmaps = googlemaps.Client(key='AIzaSyB0uFqXZOKN7RWHWuJLA-YSdFfLSzhEqUE')\n",
     "\n",
     "delay = 0.1  # Set the delay to 100ms.\n",
     "\n",
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c654cf60",
+   "id": "937f5403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "c1a54f2c",
+   "id": "f06604a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "f7d6d453",
+   "id": "3fd5c5a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,11 +242,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d149b7c6",
+   "execution_count": 89,
+   "id": "a5998253",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             5814 Broad Run Road, Jefferson, MD,  21755\n",
+       "1                400 East 32nd St, Baltimore, MD,  00000\n",
+       "2                3365 Hall Creek Lane, Owings, MD  20736\n",
+       "3            4024 Main St, Grasonville, MD 21638, USA \\n\n",
+       "4      2001 Medical Parkway - South Tower, lower leve...\n",
+       "                             ...                        \n",
+       "342        17051 Virginia Avenue, Williamsport, MD 21795\n",
+       "343              8109 Telegraph Road, Severn, MD,  21144\n",
+       "344              11939 Harford Road\\n Glen Arm, MD 21057\n",
+       "345         2115 Waverly Drive, Bel Air, MD,  21015-1013\n",
+       "346       2108 Pleasant Valley Road, Oakland, MD,  21550\n",
+       "Name: 1, Length: 326, dtype: object"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "address_set.loc[address_set[3].isnull(),1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "2009e389",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "county_list = list()\n",
+    "result_list = list()\n",
+    "check = list()\n",
+    "gmaps = googlemaps.Client(key='AIzaSyB0uFqXZOKN7RWHWuJLA-YSdFfLSzhEqUE')\n",
+    "\n",
+    "delay = 0.1  # Set the delay to 100ms.\n",
+    "\n",
+    "for i in address_set.loc[address_set[3].isnull(),1]:\n",
+    "    # Geocoding an address\n",
+    "    geocode_result = gmaps.geocode(i)\n",
+    "    result_list.append(geocode_result)\n",
+    "    check.append\n",
+    "    time.sleep(delay)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "f20385e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "county_list = list()\n",
+    "missing_list = list()\n",
+    "c = 0\n",
+    "for i in result_list:\n",
+    "    check = False\n",
+    "    for j in i[0]['address_components']:\n",
+    "        if j['long_name'] and 'County' in j['long_name']:\n",
+    "            county_list.append(j['long_name'])\n",
+    "            check = True\n",
+    "    if check is False:\n",
+    "        missing_list.append(c)\n",
+    "    c = c+ 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "2fab87c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(missing_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e06b9d68",
+   "metadata": {},
+   "source": [
+    "Twenty three records did not have a county entry- a quick examination showed that all of these had addresses in Baltimore City. \"City\" is not appended to the city name, which makes it difficult to check for in advance without knowing which cities will be included. This is further complicated as Baltimore County and Baltimore City are different entities. Fortunately there are few records in this situation, so it is easy to check for manually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "6285ecba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ": 400: East 32nd Street: Abell: Baltimore: Maryland: United States: 21218\n",
+      ": West Saratoga Street: Baltimore: Maryland: United States\n",
+      ": 422: Nottingham Road: Ten Hills: Baltimore: Maryland: United States: 21229: 2438\n",
+      ": 40: West Dickman Street: South Baltimore: Baltimore: Maryland: United States: 21230\n",
+      ": 1415: Key Highway: Riverside: Baltimore: Maryland: United States: 21230\n",
+      ": 2701: Saint Lo Drive: Belair - Edison: Baltimore: Maryland: United States: 21213: 1100\n",
+      ": 505: South Patterson Park Avenue: Canton: Baltimore: Maryland: United States: 21231: 3131\n",
+      ": 800: South Broadway: Fells Point: Baltimore: Maryland: United States: 21231: 3456\n",
+      ": 5104: York Road: Radnor - Winston: Baltimore: Maryland: United States: 21212: 4307\n",
+      ": 931: West 36th Street: Hampden: Baltimore: Maryland: United States: 21211: 2414\n",
+      ": 3400: Woodbine Avenue: Howard Park: Baltimore: Maryland: United States: 21207: 6841\n",
+      ": 1650: Orleans Street: Dunbar Broadway: Baltimore: Maryland: United States: 21205\n",
+      ": 600: South Caroline Street: Fells Point: Baltimore: Maryland: United States: 21231: 2813\n",
+      ": 1600: South Monroe Street: Baltimore: Maryland: United States: 21230: 1716\n",
+      ": 5201: Park Heights Avenue: Pimlico: Baltimore: Maryland: United States: 21215: 5177\n",
+      ": Legg Mason Building: 100: Light Street: Inner Harbor: Baltimore: Maryland: United States: 21202\n",
+      ": 2801: Saint Lo Drive: Belair - Edison: Baltimore: Maryland: United States: 21213\n",
+      ": Baltimore: Maryland: United States: 21218\n",
+      ": 201: West Preston Street: Madison Park: Baltimore: Maryland: United States: 21201: 2301\n",
+      ": 4501: Edmondson Avenue: Edmondson Village: Baltimore: Maryland: United States: 21229: 2752\n",
+      ": Plaza Garage: Plaza Garage: 500: West Redwood Street: University of MD at Baltimore: Baltimore: Maryland: United States: 21201\n",
+      ": 5100: Falls Road: Cross Keys: Baltimore: Maryland: United States: 21210\n",
+      ": 930: Whitelock Street: Reservoir Hill: Baltimore: Maryland: United States: 21217\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for i in missing_list:\n",
+    "#    result = \"\"\n",
+    "#    for j in result_list[i][0]['address_components']:\n",
+    "#        result = result + \": \" + j['long_name']\n",
+    "#    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "631451e7",
+   "metadata": {},
+   "source": [
+    "Now we will run through the results again, adding in Baltimore City if there is no county."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "3e86d9ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "county_list = list()\n",
+    "for i in result_list:\n",
+    "    check = False\n",
+    "    for j in i[0]['address_components']:\n",
+    "        if j['long_name'] and 'County' in j['long_name']:\n",
+    "            county_list.append(j['long_name'])\n",
+    "            check = True\n",
+    "    if check is False:\n",
+    "        county_list.append('Baltimore City')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5427d3",
+   "metadata": {},
+   "source": [
+    "And the counties (or city) are added to the new column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "059fa0aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address_set.loc[address_set[3].isnull(),3] = county_list"
+   ]
   }
  ],
  "metadata": {
