--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -18,8 +18,8 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "address_set = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//address_info.csv', header=None)\n",
-    "commodity_set = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//commodity_list.csv', header=None)"
+    "address_set = pd.read_csv('C://...//address_info.csv', header=None)\n",
+    "commodity_set = pd.read_csv('C://...//commodity_list.csv', header=None)"
    ]
   },
   {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "801ef2d3",
+   "id": "e209bcaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "914e5b89",
+   "id": "3c4158ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "212106d8",
+   "id": "aa049d2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "3c35bd44",
+   "id": "dff11745",
    "metadata": {},
    "outputs": [
     {
@@ -275,14 +275,14 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "fe99c4a9",
+   "id": "7fa9378d",
    "metadata": {},
    "outputs": [],
    "source": [
     "county_list = list()\n",
     "result_list = list()\n",
     "check = list()\n",
-    "gmaps = googlemaps.Client(key='AIzaSyB0uFqXZOKN7RWHWuJLA-YSdFfLSzhEqUE')\n",
+    "gmaps = googlemaps.Client(key='')\n",
     "\n",
     "delay = 0.1  # Set the delay to 100ms.\n",
     "\n",
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "90e9c9f3",
+   "id": "92bd2551",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "9f81a365",
+   "id": "5f87118b",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f74970",
+   "id": "95549b59",
    "metadata": {},
    "source": [
     "Twenty three records did not have a county entry- a quick examination showed that all of these had addresses in Baltimore City. \"City\" is not appended to the city name, which makes it difficult to check for in advance without knowing which cities will be included. This is further complicated as Baltimore County and Baltimore City are different entities. Fortunately there are few records in this situation, so it is easy to check for manually."
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "dc781263",
+   "id": "c05555ad",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc09766",
+   "id": "2b2d4752",
    "metadata": {},
    "source": [
     "Now we will run through the results again, adding in Baltimore City if there is no county."
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "3d96a590",
+   "id": "c5f207f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19cc747",
+   "id": "6b1e594d",
    "metadata": {},
    "source": [
     "And the counties (or city) are added to the new column."
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "70fcef51",
+   "id": "f73fe949",
    "metadata": {},
    "outputs": [],
    "source": [
