--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -15,6 +15,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import csv\n",
+    "from bs4 import BeautifulSoup\n",
+    "import urllib\n",
+    "import pandas as pd\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -50,13 +64,8 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "import csv\n",
-    "from bs4 import BeautifulSoup\n",
-    "import urllib\n",
-    "\n",
     "linkList = list()\n",
-    "# Modified from standard beautifulsoup usage- see Py4e\n",
+    "# Modified from standard beautifulsoup usage- see https://www.py4e.com/code3/urllink3.py\n",
     "\n",
     "#It was determined that there are 18 search pages.\n",
     "for i in range(1,19):\n",
@@ -78,7 +87,7 @@
     "            print(err)\n",
     "            print(type(err).__name__)\n",
     "\n",
-    "with open('C://Users//...//mdBest//producerLinks.csv', 'w', newline = '') as csvFile:\n",
+    "with open('C://Users//stoandel//Documents//PythonProgramming//mdBest//producerLinks.csv', 'w', newline = '') as csvFile:\n",
     "    csvWriter = csv.writer(csvFile)\n",
     "\n",
     "    linkList = list( dict.fromkeys(linkList) )\n",
@@ -192,12 +201,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "import csv\n",
-    "from bs4 import BeautifulSoup\n",
-    "import urllib\n",
-    "import pandas as pd\n",
-    "\n",
     "data = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//producerLinks.csv', header=None, nrows=1).at[0,0]\n",
     "html = urllib.request.urlopen(data).read()\n",
     "\n",
@@ -244,7 +247,6 @@
     }
    ],
    "source": [
-    "import csv\n",
     "commodityTypes = list()\n",
     "with open('C://Users//stoandel//Documents//PythonProgramming//mdBest//commodityTypes.csv', 'r', newline = '') as csvFile:\n",
     "    csvReader = csv.reader(csvFile)\n",
@@ -324,15 +326,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "import csv\n",
-    "from bs4 import BeautifulSoup\n",
-    "import urllib\n",
-    "import pandas as pd\n",
-    "import time\n",
-    "\n",
-    "#data = pd.read_csv('C://Users//stoandel//Documents//PythonProgramming//mdBest//producerLinks.csv', header=None, nrows=20).at[0,0]\n",
-    "\n",
     "# Make a unique integer ID for each ID- identifying information is not wanted.\n",
     "id = 1\n",
     "\n",
@@ -395,7 +388,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
