--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "address_set = pd.read_csv('C://...//address_info.csv', header=None)"
+    "address_set = pd.read_csv('address_info.csv', header=None)"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "16a09bc5",
    "metadata": {},
    "source": [
-    "We will check if there are coordinates for each record. If some are missing, we may cross-reference using the address."
+    "Below, a check is performed to see if there are coordinates for each record. If some are missing, we may cross-reference using the address."
    ]
   },
   {
@@ -489,6 +489,7 @@
     }
    ],
    "source": [
+    "# Get the coordinates\n",
     "county_list = list()\n",
     "result_list = list()\n",
     "check = list()\n",
@@ -511,6 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract from the results.\n",
     "county_list = list()\n",
     "missing_list = list()\n",
     "c = 0\n",
@@ -561,6 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Below is not displayed\n",
     "#for i in missing_list:\n",
     "#    result = \"\"\n",
     "#    for j in result_list[i][0]['address_components']:\n",
@@ -573,7 +576,7 @@
    "id": "5208bd7c",
    "metadata": {},
    "source": [
-    "Now we will run through the results again, adding in Baltimore City if there is no county."
+    "Now the results are run through the results again, adding in Baltimore City if there is no county."
    ]
   },
   {
@@ -629,19 +632,11 @@
    "source": [
     "address_set.to_csv('counties.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce84291e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -655,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
